feat: updates for s-index

--- a/fuji_server/config/server.ini
+++ b/fuji_server/config/server.ini
@@ -20,7 +20,7 @@ google_custom_search_id =
 google_custom_search_api_key =
 
 [EXTERNAL]
-lov_api = https://lov.linkeddata.es/dataset/lov/api/v2/vocabulary/list
-lod_cloudnet = https://lod-cloud.net/lod-data.json
+lov_api = https://sciconnect-test.b-cdn.net/s-index/lovlist.json
+lod_cloudnet = https://sciconnect-test.b-cdn.net/s-index/lod-data.json
 # bioportal_rest = http://data.bioontology.org
 # bioportal_apikey =
